# nmssearch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: run-tests.yml
src/: align.cc  align.h  alignment_space.h  alignment_stats.h  build_index.cc  build_index.h  build_index_align.cc  build_index_align.h  build_index_spectrum.cc  build_index_spectrum.h  command_parser.cc  command_parser.h  dump_index.cc  dump_index.h  errors.h  kmer_space.cc  kmer_space.h  main.cc  nw_align.cc  nw_align.h  nw_space.cc  nw_space.h  output_writer.cc  output_writer.h  parameters.h  query_index.cc  query_index.h  query_index_align.cc  query_index_align.h  query_index_spectrum.cc  query_index_spectrum.h  sequence_container.cc  sequence_container.h  sequence_reader.cc  sequence_reader.h  spectrum.cc  spectrum.h  spectrum_io.cc  spectrum_io.h  spectrum_loader.h  (+3 more)
tests/: dummy_output_writer.h  integration_tests.py  test_build_index.cc  test_build_index_align.cc  test_build_index_spectrum.cc  test_kmer_space.cc  test_nw_aligner.cc  test_output_writer.cc  test_parameter_handling.cc  test_query_index.cc  test_query_index_align.cc  test_query_index_spectrum.cc  test_spectrum.cc  test_spectrum_io.cc  test_spectrum_loader.cc  testing_helpers.h
tests/data/: query-small.fa  seqs-small.fa
tests/data/output/: hnsw-align-small.tsv  hnsw-spectrum-small.tsv
